<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.18">
  <GVL Name="GVL_Devices" Id="{3ef1adf5-ba18-48c2-a083-7ec1a9d4dd63}">
    <Declaration><![CDATA[//{attribute 'qualified_only'}
VAR_GLOBAL
	
(*Rack Mounted Turbo Pumps*)
	{attribute 'TcLinkTo' := 	'.i_xAtSpd			:=	TIIB[LAMP_PLC_E5_EL1004]^Channel 2^Input;
								 .i_xFaultNC		:=	TIIB[LAMP_PLC_E5_EL1004]^Channel 1^Input;
								 .q_RunDO			:=	TIIB[LAMP_PLC_E6_EL2794]^Channel 1^Output			 
	'}
	{attribute 'pytmc' := '
		pv: LAMP:GJ2:PTM:01
		io: io
	'}
	LAMP_GJ2_PTM_01 : FB_PTM_TurboDrive;
	
	{attribute 'TcLinkTo' := 	'.i_xAtSpd			:=	TIIB[LAMP_PLC_E5_EL1004]^Channel 4^Input;
								 .i_xFaultNC		:=	TIIB[LAMP_PLC_E5_EL1004]^Channel 3^Input;
								 .q_RunDO			:=	TIIB[LAMP_PLC_E6_EL2794]^Channel 3^Output			 
	'}
	{attribute 'pytmc' := '
		pv: LAMP:GJ2:PTM:02
		io: io
	'}
	LAMP_GJ2_PTM_02 : FB_PTM_TurboDrive;
	
	{attribute 'TcLinkTo' := 	'.i_xAtSpd			:=	TIIB[LAMP_PLC_E7_EL1004]^Channel 2^Input;
								 .i_xFaultNC		:=	TIIB[LAMP_PLC_E7_EL1004]^Channel 1^Input;
								 .q_RunDO			:=	TIIB[LAMP_PLC_E6_EL2794]^Channel 2^Output			 
	'}
	{attribute 'pytmc' := '
		pv: LAMP:GJ2:PTM:03
		io: io
	'}
	LAMP_GJ2_PTM_03 : FB_PTM_TurboDrive;
	
	{attribute 'TcLinkTo' := 	'.i_xAtSpd			:=	TIIB[LAMP_PLC_E7_EL1004]^Channel 4^Input;
								 .i_xFaultNC		:=	TIIB[LAMP_PLC_E7_EL1004]^Channel 3^Input;
								 .q_RunDO			:=	TIIB[LAMP_PLC_E6_EL2794]^Channel 4^Output			 
	'}
	{attribute 'pytmc' := '
		pv: LAMP:GJ2:PTM:04
		io: io
	'}
	LAMP_GJ2_PTM_04 : FB_PTM_TurboDrive;

(*Onboard Turbo Pumps*)
	{attribute 'TcLinkTo' := 	'.i_xAtSpd			:=	TIIB[LAMP_PNL1_EP01_EP2338-0002]^Channel 1^Input;
								 .i_xFaultNC		:=	TIIB[LAMP_PNL1_EP01_EP2338-0002]^Channel 2^Input;
								 .i_xRemote			:=	TIIB[LAMP_PNL1_EP01_EP2338-0002]^Channel 3^Input;
								 .q_RunDO			:=	TIIB[LAMP_PNL1_EP02_EP2624-0002]^Channel 1^Output;
								 .q_xReset 			:=	TIIB[LAMP_PNL1_EP02_EP2624-0002]^Channel 2^Output				 
	'}
	{attribute 'pytmc' := '
		pv: LAMP:C2:PTM:01
		io: io
	'}
	LAMP_C2_PTM_01 : FB_PTM_Pfeiffer;
	
	{attribute 'TcLinkTo' := 	'.i_xAtSpd			:=	TIIB[LAMP_PNL1_EP01_EP2338-0002]^Channel 5^Input;
								 .i_xFaultNC		:=	TIIB[LAMP_PNL1_EP01_EP2338-0002]^Channel 6^Input;
								 .i_xRemote			:=	TIIB[LAMP_PNL1_EP01_EP2338-0002]^Channel 7^Input;
								 .q_RunDO			:=	TIIB[LAMP_PNL1_EP02_EP2624-0002]^Channel 3^Output;
								 .q_xReset 			:=	TIIB[LAMP_PNL1_EP02_EP2624-0002]^Channel 4^Output				 
	'}
	{attribute 'pytmc' := '
		pv: LAMP:C2:PTM:02
		io: io
	'}
	LAMP_C2_PTM_02 : FB_PTM_Pfeiffer;
	
	{attribute 'TcLinkTo' := 	'.i_xAtSpd			:=	TIIB[LAMP_PNL1_EP04_EP2338-0002]^Channel 1^Input;
								 .i_xFaultNC		:=	TIIB[LAMP_PNL1_EP04_EP2338-0002]^Channel 2^Input;
								 .i_xRemote			:=	TIIB[LAMP_PNL1_EP04_EP2338-0002]^Channel 3^Input;
								 .q_RunDO			:=	TIIB[LAMP_PNL1_EP05_EP2624-0002]^Channel 1^Output;
								 .q_xReset 			:=	TIIB[LAMP_PNL1_EP05_EP2624-0002]^Channel 2^Output				 
	'}
	{attribute 'pytmc' := '
		pv: LAMP:C2:PTM:03
		io: io
	'}
	LAMP_C2_PTM_03 : FB_PTM_Pfeiffer;
	
	{attribute 'TcLinkTo' := 	'.i_xAtSpd			:=	TIIB[LAMP_PNL1_EP04_EP2338-0002]^Channel 5^Input;
								 .i_xFaultNC		:=	TIIB[LAMP_PNL1_EP04_EP2338-0002]^Channel 6^Input;
								 .i_xRemote			:=	TIIB[LAMP_PNL1_EP04_EP2338-0002]^Channel 7^Input;
								 .q_RunDO			:=	TIIB[LAMP_PNL1_EP05_EP2624-0002]^Channel 3^Output;
								 .q_xReset 			:=	TIIB[LAMP_PNL1_EP05_EP2624-0002]^Channel 4^Output				 
	'}
	{attribute 'pytmc' := '
		pv: LAMP:C2:PTM:04
		io: io
	'}
	LAMP_C2_PTM_04 : FB_PTM_Pfeiffer;
	
	{attribute 'TcLinkTo' := 	'.i_xAtSpd			:=	TIIB[LAMP_PNL1_EP07_EP2338-0002]^Channel 1^Input;
								 .i_xFaultNC		:=	TIIB[LAMP_PNL1_EP07_EP2338-0002]^Channel 2^Input;
								 .i_xRemote			:=	TIIB[LAMP_PNL1_EP07_EP2338-0002]^Channel 3^Input;
								 .q_RunDO			:=	TIIB[LAMP_PNL1_EP08_EP2624-0002]^Channel 1^Output;
								 .q_xReset 			:=	TIIB[LAMP_PNL1_EP08_EP2624-0002]^Channel 2^Output				 
	'}
	{attribute 'pytmc' := '
		pv: LAMP:GJ1:PTM:01
		io: io
	'}
	LAMP_GJ1_PTM_01 : FB_PTM_Pfeiffer;
	
	{attribute 'TcLinkTo' := 	'.i_xAtSpd			:=	TIIB[LAMP_PNL1_EP07_EP2338-0002]^Channel 5^Input;
								 .i_xFaultNC		:=	TIIB[LAMP_PNL1_EP07_EP2338-0002]^Channel 6^Input;
								 .i_xRemote			:=	TIIB[LAMP_PNL1_EP07_EP2338-0002]^Channel 7^Input;
								 .q_RunDO			:=	TIIB[LAMP_PNL1_EP08_EP2624-0002]^Channel 3^Output;
								 .q_xReset 			:=	TIIB[LAMP_PNL1_EP08_EP2624-0002]^Channel 4^Output				 
	'}
	{attribute 'pytmc' := '
		pv: LAMP:GJ1:PTM:02
		io: io
	'}
	LAMP_GJ1_PTM_02 : FB_PTM_Pfeiffer;
	
	{attribute 'TcLinkTo' := 	'.i_xAtSpd			:=	TIIB[LAMP_PNL1_EP10_EP2338-0002]^Channel 1^Input;
								 .i_xFaultNC		:=	TIIB[LAMP_PNL1_EP10_EP2338-0002]^Channel 2^Input;
								 .i_xRemote			:=	TIIB[LAMP_PNL1_EP10_EP2338-0002]^Channel 3^Input;
								 .q_RunDO			:=	TIIB[LAMP_PNL1_EP11_EP2624-0002]^Channel 1^Output;
								 .q_xReset 			:=	TIIB[LAMP_PNL1_EP11_EP2624-0002]^Channel 2^Output				 
	'}
	{attribute 'pytmc' := '
		pv: LAMP:GJ1:PTM:03
		io: io
	'}
	LAMP_GJ1_PTM_03 : FB_PTM_Pfeiffer;
	
	{attribute 'TcLinkTo' := 	'.i_xAtSpd			:=	TIIB[LAMP_PNL1_EP10_EP2338-0002]^Channel 5^Input;
								 .i_xFaultNC		:=	TIIB[LAMP_PNL1_EP10_EP2338-0002]^Channel 6^Input;
								 .i_xRemote			:=	TIIB[LAMP_PNL1_EP10_EP2338-0002]^Channel 7^Input;
								 .q_RunDO			:=	TIIB[LAMP_PNL1_EP11_EP2624-0002]^Channel 3^Output;
								 .q_xReset 			:=	TIIB[LAMP_PNL1_EP11_EP2624-0002]^Channel 4^Output				 
	'}
	{attribute 'pytmc' := '
		pv: LAMP:GJ1:PTM:04
		io: io
	'}
	LAMP_GJ1_PTM_04 : FB_PTM_Pfeiffer;
	
	{attribute 'TcLinkTo' := 	'.i_xAtSpd			:=	TIIB[LAMP_PNL2_EP16_EP2338-0002]^Channel 1^Input;
								 .i_xFaultNC		:=	TIIB[LAMP_PNL2_EP16_EP2338-0002]^Channel 2^Input;
								 .q_RunDO			:=	TIIB[LAMP_PNL2_EP17_EP2624-0002]^Channel 1^Output;
								 .q_xReset 			:=	TIIB[LAMP_PNL2_EP17_EP2624-0002]^Channel 2^Output				 
	'}
	{attribute 'pytmc' := '
		pv: LAMP:CATCH:PTM:01
		io: io
	'}
	LAMP_CATCH_PTM_01 : FB_PTM_Pfeiffer;
	
	{attribute 'TcLinkTo' := 	'.i_xAtSpd			:=	TIIB[LAMP_PNL2_EP16_EP2338-0002]^Channel 5^Input;
								 .i_xFaultNC		:=	TIIB[LAMP_PNL2_EP16_EP2338-0002]^Channel 6^Input;
								 .q_RunDO			:=	TIIB[LAMP_PNL2_EP17_EP2624-0002]^Channel 3^Output;
								 .q_xReset 			:=	TIIB[LAMP_PNL2_EP17_EP2624-0002]^Channel 4^Output				 
	'}
	{attribute 'pytmc' := '
		pv: LAMP:CATCH:PTM:02
		io: io
	'}
	LAMP_CATCH_PTM_02 : FB_PTM_Pfeiffer;
	
	{attribute 'TcLinkTo' := 	'.i_xAtSpd			:=	TIIB[LAMP_PNL2_EP13_EP2338-0002]^Channel 1^Input;
								 .i_xFaultNC		:=	TIIB[LAMP_PNL2_EP13_EP2338-0002]^Channel 2^Input;
								 .i_xRemote			:=	TIIB[LAMP_PNL2_EP13_EP2338-0002]^Channel 3^Input;
								 .q_RunDO			:=	TIIB[LAMP_PNL2_EP14_EP2624-0002]^Channel 1^Output;
								 .q_xReset 			:=	TIIB[LAMP_PNL2_EP14_EP2624-0002]^Channel 2^Output				 
	'}
	{attribute 'pytmc' := '
		pv: LAMP:ROUGH:PTM:01
		io: io
	'}
	LAMP_ROUGH_PTM_01 : FB_PTM_Pfeiffer;
	
	{attribute 'TcLinkTo' := 	'.i_xAtSpd			:=	TIIB[LAMP_PNL2_EP13_EP2338-0002]^Channel 5^Input;
								 .i_xFaultNC		:=	TIIB[LAMP_PNL2_EP13_EP2338-0002]^Channel 6^Input;
								 .i_xRemote			:=	TIIB[LAMP_PNL2_EP13_EP2338-0002]^Channel 7^Input;
								 .q_RunDO			:=	TIIB[LAMP_PNL2_EP14_EP2624-0002]^Channel 3^Output;
								 .q_xReset 			:=	TIIB[LAMP_PNL2_EP14_EP2624-0002]^Channel 4^Output				 
	'}
	{attribute 'pytmc' := '
		pv: LAMP:C1:PTM:01
		io: io
	'}
	LAMP_C1_PTM_01 : FB_PTM_Pfeiffer;
	
	

(*KTOF Turbo Pump*)
(*
	{attribute 'TcLinkTo' := 	'.i_xAtSpd			:=	TIIB[KTOF_PNL1_EP01_EP2338-0002]^Channel 1^Input;
								 .i_xFaultNC		:=	TIIB[KTOF_PNL1_EP01_EP2338-0002]^Channel 2^Input;
								 .i_xRemote			:=	TIIB[KTOF_PNL1_EP01_EP2338-0002]^Channel 3^Input;
								 .q_RunDO			:=	TIIB[KTOF_PNL1_EP02_EP2624-0002]^Channel 1^Output;
								 .q_xReset 			:=	TIIB[KTOF_PNL1_EP02_EP2624-0002]^Channel 2^Output				 
	'}
	{attribute 'pytmc' := '
		pv: KTOF:PTM:01
		io: io
	'}
	KTOF_PTM_01 : FB_PTM_Pfeiffer;
*)
(*Pirani MKS 275 Gauges*)
	{attribute 'TcLinkTo' := 	'.i_iPRESS_R	:=	TIIB[LAMP_PNL2_EP19_EP3174-0002]^AI Standard Channel 1^Value
	'}
	{attribute 'pytmc' := '
		pv: LAMP:C2:GPI:01
		io: io
	'}
	LAMP_C2_GPI_01 : FB_MKS275;
	
(*	{attribute 'TcLinkTo' := 	'.i_iPRESS_R	:=	TIIB[LAMP_PNL2_EP19_EP3174-0002]^AI Standard Channel 2^Value
	'}
	{attribute 'pytmc' := '
		pv: LAMP:CATCH:GPI:01
		io: io
	'}
	LAMP_CATCH_GPI_01 : FB_MKS275; //NO GAUGE INSTALLED
*)	
	
	{attribute 'TcLinkTo' := 	'.i_iPRESS_R	:=	TIIB[LAMP_PNL2_EP19_EP3174-0002]^AI Standard Channel 3^Value
	'}
	{attribute 'pytmc' := '
		pv: LAMP:GJ1:GPI:01
		io: io
	'}
	LAMP_GJ1_GPI_01 : FB_MKS275;
	
	{attribute 'TcLinkTo' := 	'.i_iPRESS_R	:=	TIIB[LAMP_PNL2_EP19_EP3174-0002]^AI Standard Channel 4^Value
	'}
	{attribute 'pytmc' := '
		pv: LAMP:GJ2:GPI:01
		io: io
	'}
	LAMP_GJ2_GPI_01 : FB_MKS275;

(*MicroPirani MKS 925 Gauges*)
	{attribute 'TcLinkTo' := 	'.i_iPRESS_R	:=	TIIB[LAMP_PNL2_EP20_EP3174-0002]^AI Standard Channel 1^Value
	'}
	{attribute 'pytmc' := '
		pv: LAMP:ROUGH:GPI:01
		io: io
	'}
	LAMP_ROUGH_GPI_01 : FB_9XX;
	
	{attribute 'TcLinkTo' := 	'.i_iPRESS_R	:=	TIIB[LAMP_PNL2_EP20_EP3174-0002]^AI Standard Channel 2^Value
	'}
	{attribute 'pytmc' := '
		pv: LAMP:ROUGH:GPI:02
		io: io
	'}
	LAMP_ROUGH_GPI_02 : FB_9XX;
	
	{attribute 'TcLinkTo' := 	'.i_iPRESS_R	:=	TIIB[LAMP_PNL2_EP20_EP3174-0002]^AI Standard Channel 3^Value
	'}
	{attribute 'pytmc' := '
		pv: LAMP:ROUGH:GPI:03
		io: io
	'}
	LAMP_ROUGH_GPI_03 : FB_9XX;
	
	{attribute 'TcLinkTo' := 	'.i_iPRESS_R	:=	TIIB[LAMP_PNL2_EP20_EP3174-0002]^AI Standard Channel 4^Value
	'}
	{attribute 'pytmc' := '
		pv: LAMP:ROUGH:GPI:04
		io: io
	'}
	LAMP_ROUGH_GPI_04 : FB_9XX;

(*Cold Cathode MKS 500 Gauges*)
	{attribute 'TcLinkTo' := 	'.i_iPRESS_R	:=	TIIB[LAMP_PNL2_EP21_EP3174-0002]^AI Standard Channel 1^Value;
								 .q_xHV_DIS		:= 	TIIB[LAMP_PNL2_EP22_EP2624-0002]^Channel 1^Output
	'}	
	{attribute 'pytmc' := '
		pv: LAMP:C2:GCC:01
		io: io
	'}
	LAMP_C2_GCC_01 : FB_MKS500;
	
	{attribute 'TcLinkTo' := 	'.i_iPRESS_R	:=	TIIB[LAMP_PNL2_EP21_EP3174-0002]^AI Standard Channel 2^Value;
								 .q_xHV_DIS		:= 	TIIB[LAMP_PNL2_EP22_EP2624-0002]^Channel 2^Output
	'}	
	{attribute 'pytmc' := '
		pv: LAMP:CATCH:GCC:01
		io: io
	'}
	LAMP_CATCH_GCC_01 : FB_MKS500;
	
	{attribute 'TcLinkTo' := 	'.i_iPRESS_R	:=	TIIB[LAMP_PNL2_EP21_EP3174-0002]^AI Standard Channel 3^Value;
								 .q_xHV_DIS		:= 	TIIB[LAMP_PNL2_EP22_EP2624-0002]^Channel 3^Output
	'}	
	{attribute 'pytmc' := '
		pv: LAMP:CATCH:GCC:02
		io: io
	'}
	LAMP_CATCH_GCC_02 : FB_MKS500;
	
	{attribute 'TcLinkTo' := 	'.i_iPRESS_R	:=	TIIB[LAMP_PNL2_EP21_EP3174-0002]^AI Standard Channel 4^Value;
								 .q_xHV_DIS		:= 	TIIB[LAMP_PNL2_EP22_EP2624-0002]^Channel 4^Output
	'}	
	{attribute 'pytmc' := '
		pv: LAMP:GJ1:GCC:01
		io: io
	'}
	LAMP_GJ1_GCC_01 : FB_MKS500;
	
	{attribute 'TcLinkTo' := 	'.i_iPRESS_R	:=	TIIB[LAMP_PNL2_EP23_EP3174-0002]^AI Standard Channel 1^Value;
								 .q_xHV_DIS		:= 	TIIB[LAMP_PNL2_EP24_EP2624-0002]^Channel 1^Output
	'}	
	{attribute 'pytmc' := '
		pv: LAMP:GJ2:GCC:01
		io: io
	'}
	LAMP_GJ2_GCC_01 : FB_MKS500;

(*Hot Cathode MKS 909 Gauges*)
	{attribute 'TcLinkTo' := 	'.i_iPRESS_R	:=	TIIB[LAMP_PNL2_EP23_EP3174-0002]^AI Standard Channel 2^Value;
								 .q_xHV_DIS		:= 	TIIB[LAMP_PNL2_EP24_EP2624-0002]^Channel 2^Output
	'}	
	{attribute 'pytmc' := '
		pv: LAMP:C1:GHC:01
		io: io
	'}
	LAMP_C1_GHC_01 : FB_MKS909;

(*Normally Closed Valve with Readback*)
	{attribute 'TcLinkTo' := 	'.i_xOpnLS	:=	TIIB[LAMP_PNL2_EP25_EP2338-0002]^Channel 1^Input;
								 .i_xClsLS	:=	TIIB[LAMP_PNL2_EP25_EP2338-0002]^Channel 2^Input;
								 .q_xOPN_DO	:=	TIIB[LAMP_PNL2_EP25_EP2338-0002]^Channel 11^Output
	'}
	{attribute 'pytmc' := '
		pv: LAMP:ROUGH:VRC:01
		io: io
	'}
	LAMP_ROUGH_VRC_01 : FB_VRC;
	
	{attribute 'TcLinkTo' := 	'.i_xOpnLS	:=	TIIB[LAMP_PNL2_EP26_EP2338-0002]^Channel 1^Input;
								 .i_xClsLS	:=	TIIB[LAMP_PNL2_EP26_EP2338-0002]^Channel 2^Input;
								 .q_xOPN_DO	:=	TIIB[LAMP_PNL2_EP26_EP2338-0002]^Channel 11^Output
	'}
	{attribute 'pytmc' := '
		pv: LAMP:ROUGH:VRC:03
		io: io
	'}
	LAMP_ROUGH_VRC_03 : FB_VRC;

(*Normally Open Valve with Readback*)
	{attribute 'TcLinkTo' := 	'.i_xOpnLS	:=	TIIB[LAMP_PNL2_EP25_EP2338-0002]^Channel 5^Input;
								 .i_xClsLS	:=	TIIB[LAMP_PNL2_EP25_EP2338-0002]^Channel 6^Input;
								 .q_xCLS_DO	:=	TIIB[LAMP_PNL2_EP25_EP2338-0002]^Channel 15^Output
	'}
	{attribute 'pytmc' := '
		pv: LAMP:ROUGH:VRC:02
		io: io
	'}
	LAMP_ROUGH_VRC_02 : FB_VRC_NO;
	
(*Pfeiffer*)
	// They share the same serial port
	st_Pfeiffer_CTRL_LAMP_C2_PTM_01 		: ARRAY[1..20] OF ST_PfeifferControl;
	st_Pfeiffer_RBK_LAMP_C2_PTM_01 			: ARRAY[1..20] OF ST_PfeifferStatus;
	fb_PfeifferCom_LAMP_C2_PTM_01 			: FB_PFEIFFER_COM;
	
	st_Pfeiffer_CTRL_LAMP_C2_PTM_02 		: ARRAY[1..20] OF ST_PfeifferControl;
	st_Pfeiffer_RBK_LAMP_C2_PTM_02 			: ARRAY[1..20] OF ST_PfeifferStatus;
	fb_PfeifferCom_LAMP_C2_PTM_02 			: FB_PFEIFFER_COM;
	
	st_Pfeiffer_CTRL_LAMP_C2_PTM_03 		: ARRAY[1..20] OF ST_PfeifferControl;
	st_Pfeiffer_RBK_LAMP_C2_PTM_03 			: ARRAY[1..20] OF ST_PfeifferStatus;
	fb_PfeifferCom_LAMP_C2_PTM_03 			: FB_PFEIFFER_COM;
	
	st_Pfeiffer_CTRL_LAMP_C2_PTM_04			: ARRAY[1..20] OF ST_PfeifferControl;
	st_Pfeiffer_RBK_LAMP_C2_PTM_04 			: ARRAY[1..20] OF ST_PfeifferStatus;
	fb_PfeifferCom_LAMP_C2_PTM_04 			: FB_PFEIFFER_COM;
	
	st_Pfeiffer_CTRL_LAMP_GJ1_PTM_01 		: ARRAY[1..20] OF ST_PfeifferControl;
	st_Pfeiffer_RBK_LAMP_GJ1_PTM_01 		: ARRAY[1..20] OF ST_PfeifferStatus;
	fb_PfeifferCom_LAMP_GJ1_PTM_01 			: FB_PFEIFFER_COM;
	
	st_Pfeiffer_CTRL_LAMP_GJ1_PTM_02 		: ARRAY[1..20] OF ST_PfeifferControl;
	st_Pfeiffer_RBK_LAMP_GJ1_PTM_02 		: ARRAY[1..20] OF ST_PfeifferStatus;
	fb_PfeifferCom_LAMP_GJ1_PTM_02 			: FB_PFEIFFER_COM;
	
	st_Pfeiffer_CTRL_LAMP_GJ1_PTM_03 		: ARRAY[1..20] OF ST_PfeifferControl;
	st_Pfeiffer_RBK_LAMP_GJ1_PTM_03 		: ARRAY[1..20] OF ST_PfeifferStatus;
	fb_PfeifferCom_LAMP_GJ1_PTM_03 			: FB_PFEIFFER_COM;
	
	st_Pfeiffer_CTRL_LAMP_GJ1_PTM_04 		: ARRAY[1..20] OF ST_PfeifferControl;
	st_Pfeiffer_RBK_LAMP_GJ1_PTM_04 		: ARRAY[1..20] OF ST_PfeifferStatus;
	fb_PfeifferCom_LAMP_GJ1_PTM_04 			: FB_PFEIFFER_COM;
	
	st_Pfeiffer_CTRL_LAMP_ROUGH_PTM_01 		: ARRAY[1..20] OF ST_PfeifferControl;
	st_Pfeiffer_RBK_LAMP_ROUGH_PTM_01 		: ARRAY[1..20] OF ST_PfeifferStatus;
	fb_PfeifferCom_LAMP_ROUGH_PTM_01 		: FB_PFEIFFER_COM;
	
	st_Pfeiffer_CTRL_LAMP_C1_PTM_01 		: ARRAY[1..20] OF ST_PfeifferControl;
	st_Pfeiffer_RBK_LAMP_C1_PTM_01 			: ARRAY[1..20] OF ST_PfeifferStatus;
	fb_PfeifferCom_LAMP_C1_PTM_01 			: FB_PFEIFFER_COM;
	
	st_Pfeiffer_CTRL_LAMP_CATCH_PTM_01 		: ARRAY[1..20] OF ST_PfeifferControl;
	st_Pfeiffer_RBK_LAMP_CATCH_PTM_01 		: ARRAY[1..20] OF ST_PfeifferStatus;
	fb_PfeifferCom_LAMP_CATCH_PTM_01 		: FB_PFEIFFER_COM;
	
	st_Pfeiffer_CTRL_LAMP_CATCH_PTM_02 		: ARRAY[1..20] OF ST_PfeifferControl;
	st_Pfeiffer_RBK_LAMP_CATCH_PTM_02 		: ARRAY[1..20] OF ST_PfeifferStatus;
	fb_PfeifferCom_LAMP_CATCH_PTM_02 		: FB_PFEIFFER_COM;

(*	
	st_Pfeiffer_CTRL_KTOF_PTM_01 			: ARRAY[1..20] OF ST_PfeifferControl;
	st_Pfeiffer_RBK_KTOF_PTM_01 			: ARRAY[1..20] OF ST_PfeifferStatus;
	fb_PfeifferCom_KTOF_PTM_01 				: FB_PFEIFFER_COM;
*)	
	//Leybold status
	st_TD20_RBK_LAMP_GJ2_PTM_01 		: ST_TD20Status;
	fb_TD20Com_LAMP_GJ2_PTM_01 			: FB_OERLIKON_TD20_COM;
	
	st_TD20_RBK_LAMP_GJ2_PTM_02 		: ST_TD20Status;
	fb_TD20Com_LAMP_GJ2_PTM_02 			: FB_OERLIKON_TD20_COM;
	
	st_TD20_RBK_LAMP_GJ2_PTM_03 		: ST_TD20Status;
	fb_TD20Com_LAMP_GJ2_PTM_03 			: FB_OERLIKON_TD20_COM;
	
	st_TD20_RBK_LAMP_GJ2_PTM_04 		: ST_TD20Status;
	fb_TD20Com_LAMP_GJ2_PTM_04 			: FB_OERLIKON_TD20_COM;

END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>