<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.18">
  <GVL Name="GVL_Variables" Id="{c498846d-d5de-49b1-923d-af8c367da0a5}">
    <Declaration><![CDATA[//{attribute 'qualified_only'}
VAR_GLOBAL
	{attribute 'pytmc' := '
		pv: PLC:LAMP:VAC:OVRDON
		io: io
	'}
	xSystemOverrideMode_LAMP	: BOOL := FALSE; (* Global system override for the HXR Vacuum System EBD*)
	
	{attribute 'pytmc' := '
		pc: PLC:LAMP:ON:BEAMLINE
		io:io
	'}
	xOnBeamline	:	BOOL := TRUE; (*Always assume On Beamline for safety checks*)
	
	rHighVoltageMinPressure	: REAL := 1e-05; (*Hard coded High voltage Minimum Enable Pressure*)
	
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>